Fix z-index

--- a/src/shared/ui/Search/Search.module.scss
+++ b/src/shared/ui/Search/Search.module.scss
@@ -4,7 +4,7 @@
   position: fixed;
   inset: 0;
   background: var(--opacity-colors-black-40);
-  z-index: 0;
+  z-index: 1;
   display: block;
   opacity: 1;
   animation: showOpacity 0.3s ease-in-out;
